# TestAutoBrowse

./: .gitignore  automation_autobuild.bat  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/testautobrowse/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/testautobrowse/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/testautobrowse/: ExampleUnitTest.java
auto_browse_daemon/: CMakeLists.txt  build.gradle
auto_browse_daemon/src/androidTest/java/com/example/auto_browse_daemon/: ExampleInstrumentedTest.java
auto_browse_daemon/src/main/: AndroidManifest.xml
auto_browse_daemon/src/main/cpp/inc/: DaemonAgent.h  HelperDefine.h  Logger.h  Mutex.h  common.h  utils.h
auto_browse_daemon/src/main/cpp/src/: DaemonAgent.cpp  Logger.cpp  Mutex.cpp  main.cpp  utils.cpp
auto_browse_daemon/src/test/java/com/example/auto_browse_daemon/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
test_auto_browse/: build.gradle
test_auto_browse/src/main/java/com/android/uiautomator/common/: UiWatchers.java
test_auto_browse/src/main/java/com/android/uiautomator/core/: CustomizedUiAutomatorBridge.java
test_auto_browse/src/main/java/com/example/test_auto_browse/: AutoBrowseApp.java  AutomationAgentBootstrap.java  Constant.java  CoordsAdapter.java  SimpleUncaughtCrashHandler.java  UiDriver.java  UiWatchers.java
(+185 files in other folders)
